# ByteBuddy

./: CMakeLists.txt  LICENSE  README.md  imgui.ini  main.cpp
include/: buddy.cpp  buddy.hpp
resources/icon/: app.rc.in
